# conflo-wb

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5502d0130dfa_initial_schema.py  a1b2c3d4e5f6_sprint3_schema_updates.py  b2c3d4e5f6a7_sprint8_remaining_tools.py  c3d4e5f6a7b8_sprint9_file_storage_integrations.py  d4e5f6a7b8c9_sprint10_event_logging_admin.py
apps/api/app/: config.py  database.py  dependencies.py  main.py
apps/api/app/integrations/: google_calendar.py  microsoft_graph.py  quickbooks.py
apps/api/app/middleware/: auth.py  event_logging.py  rate_limiter.py  request_timing.py
apps/api/app/models/: __init__.py  admin_user.py  audit_log.py  bid_package.py  bid_submission.py  budget_line_item.py  change_order.py  comment.py  contact.py  cost_code_template.py  file.py  (+33 more)
apps/api/tests/: conftest.py  test_admin.py  test_benchmark_service.py  test_bids.py  test_billing.py  test_budget.py  test_cache_service.py  test_change_orders.py  test_comments.py  test_daily_logs.py  test_documents.py  test_drawings.py  test_event_logging.py  test_file_service.py  test_inspections.py  test_integrations.py  test_invitations.py  test_meetings.py  test_notifications.py  test_numbering_service.py  test_onboarding.py  test_pay_apps.py  test_permission_engine.py  test_phase_machine.py  test_photos.py  test_procurement.py  test_punch_list.py  test_rfis.py  test_schedule.py  test_submittals.py  test_todos.py  test_transmittals.py
(+286 files in other folders)
